# netbox-proxbox

./: README.md
netbox_proxbox/: main.py  urls.py  views.py
netbox_proxbox/templates/netbox_proxbox/: home.html
netbox_proxbox/templates/netbox_proxbox/home/: fastapi_card.html  netbox_card.html  proxmox_card.html  script.html
netbox_proxbox/templates/netbox_proxbox/proxmox/: version.html
netbox_proxbox/views/: __init__.py  keepalive_status.py
proxbox_api/: main.py  proxbox-cli.py  pyproject.toml
proxbox_api/routes/netbox/dcim/: device_types.py
proxbox_api/routes/netbox/generic/: bootstrap.py  get.py
proxbox_api/routes/netbox/generic/check_duplicate/: check_vm_interface.py
proxbox_api/routes/netbox/virtualization/: cluster.py  interfaces.py  virtual_machines.py
proxbox_api/routes/proxbox/clusters/: __init__.py
